fix: apply minor fixes in html and css

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
           </div>
 
-          <aside class="columns__col columns__col_size_small columns__col_type_secondary">
+          <aside class="aside columns__col columns__col_size_small columns__col_type_secondary">
             <div class="aside__logo logo">
               <figure class="logo__figure">
                 <picture>
@@ -235,15 +235,15 @@
       </main>
 
       <footer class="page__footer footer">
-          <div class="page__columns columns">
-            <div class="columns__col columns__col_size_large">
+        <div class="page__columns columns">
+          <div class="columns__col columns__col_size_large">
 
             <ul class="footer__list">
               <li class="footer__item"><a class="footer__link link" href="https://github.com/webkwondo">Github</a></li>
               <li class="footer__item"><span class="footer__text">© 2022</span></li>
               <li class="footer__item">
                 <a class="footer__link" href="https://rs.school/js/" target="_blank">
-                  <img class="footer_img" src="assets/svg/rs-school-js-logo.svg" width="86" height="32" alt="RS School logo">
+                  <img class="footer__img" src="assets/svg/rs-school-js-logo.svg" width="86" height="32" alt="RS School logo">
                 </a>
               </li>
             </ul>
