--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           <div class="columns__col columns__col_size_large">
 
             <ul class="footer__list">
-              <li class="footer__item"><a class="footer__link link" href="https://github.com/webkwondo">Github</a></li>
+              <li class="footer__item"><a class="footer__link link" href="https://github.com/webkwondo" target="_blank">Github</a></li>
               <li class="footer__item"><span class="footer__text">© 2022</span></li>
               <li class="footer__item">
                 <a class="footer__link" href="https://rs.school/js/" target="_blank">
